preprocess into pipeline

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -98,21 +98,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The number of samples: 115\n",
-            "The number of columns: 494\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "['lipoma', 'liposarcoma']\n",
-            "Categories (2, object): ['lipoma' < 'liposarcoma']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "data = load_data()\n",
         "print(f'The number of samples: {len(data.index)}')\n",
@@ -136,17 +124,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "TEST_set.csv already exists\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# code that splits the data into test and validation sets if this is not done already\n",
         "split_set(X,y,test_size)"
@@ -162,21 +142,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['lipoma', 'liposarcoma']\n",
-            "Categories (2, object): ['lipoma' < 'liposarcoma']\n",
-            "All values are numerical.\n",
-            "Size before removal zero variances:  (56, 493)\n",
-            "Size after removal zero variance:  (56, 474)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "TRAIN = pd.read_csv('TRAIN_set.csv', index_col=0)\n",
         "X_train = TRAIN.drop('label', axis=1)\n",
@@ -190,26 +158,19 @@
         "# split into training and validation set\n",
         "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.3, random_state=10)\n",
         "\n",
-        "# scale the training set\n",
-        "sc = StandardScaler()\n",
-        "X_train = sc.fit_transform(X_train)\n",
-        "X_valid = sc.transform(X_valid)\n",
+        "from sklearn.pipeline import Pipeline\n",
         "\n",
-        "# preprocess the data \n",
-        "if not str in data.values:\n",
-        "    print(f'All values are numerical.')\n",
-        "if np.isnan(X_train).any():\n",
-        "    imp = SimpleImputer(missing_value=np.nan, strategy='mean')\n",
-        "    X_train.iloc[:,:] = imp.fit_transform(X_train)\n",
-        "    X_valid.iloc[:,:] = imp.fit(X_valid)\n",
-        "    print(f'All NaN values replaced by mean value of the column.')\n",
+        "print(f'Size before preprocess: ', X_train.shape)\n",
         "\n",
-        "# remove features with zero variance\n",
-        "print(f'Size before removal zero variances: ', X_train.shape)\n",
-        "vt = VarianceThreshold(threshold=0)\n",
-        "X_train = vt.fit_transform(X_train)\n",
-        "X_valid = vt.transform(X_valid)\n",
-        "print(f'Size after removal zero variance: ', X_train.shape)"
+        "pipe_preprocess = Pipeline([\n",
+        "    (\"check nan\", SimpleImputer(missing_values=np.nan, strategy='mean')),\n",
+        "    (\"scale\", StandardScaler()),\n",
+        "    (\"variance\", VarianceThreshold(threshold=0)),\n",
+        "])\n",
+        "\n",
+        "X_train = pipe_preprocess.fit_transform(X_train)\n",
+        "X_valid = pipe_preprocess.transform(X_valid)\n",
+        "print(f'Size after preprocess: ', X_train.shape)"
       ]
     },
     {
@@ -218,42 +179,6 @@
       "metadata": {},
       "source": [
         "# Classify"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "rfc               precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.53      0.91      0.67        11\n",
-            "           1       0.80      0.31      0.44        13\n",
-            "\n",
-            "    accuracy                           0.58        24\n",
-            "   macro avg       0.66      0.61      0.56        24\n",
-            "weighted avg       0.67      0.58      0.55        24\n",
-            "\n",
-            "[[10  1]\n",
-            " [ 9  4]]\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "# try a classifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "rfc = RandomForestClassifier(n_estimators=500)\n",
-        "rfc.fit(X_train, y_train)\n",
-        "pred_rfc = rfc.predict(X_valid)\n",
-        "\n",
-        "print('rfc', classification_report(y_valid, pred_rfc))\n",
-        "print(confusion_matrix(y_valid, pred_rfc))"
       ]
     }
   ],
