--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -809,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Models"
+    "# Classifiers"
    ]
   },
   {
@@ -817,7 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear SVC"
+    "### Linear SVC"
    ]
   },
   {
@@ -857,26 +857,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RF"
+    "### Random Forest\n",
+    "In this subsection, random forest is performed on the train set. Hyperparameter tuning is performed using a \"random grid\" dictionary with values for n_estimators, max_depth, min_samples_split and min_samples_leaf. 500 iterations are performed within this random grid, the best hyperparameters are printed according to the accuracy. 5-fold cross-validation is applied. After hyperparameter tuning, the resulting hyperparameters are inserted in the final random forest algorithm, which is tested on the test set. Resulting accuracy, sensitivity, specificity and area under the ROC are given, as well as the ROC plot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best hyperparameters are: {'n_estimators': 250, 'min_samples_split': 5, 'min_samples_leaf': 1, 'max_depth': 150}\n",
-      "Best score is: 0.6382051282051282\n"
+      "Best hyperparameters: {'n_estimators': 250, 'min_samples_split': 7, 'min_samples_leaf': 2, 'max_depth': 250}\n",
+      "Best accuracy score: 0.6383333333333333\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Import necessary functions \n",
+    "from sklearn.model_selection import RandomizedSearchCV # randomised search function\n",
+    "from sklearn.ensemble import RandomForestClassifier # random forest classifier\n",
     "\n",
     "# Create the random grid\n",
     "random_grid = {'n_estimators': [100,250,500,750,1000,1250,1500,1750,2000],\n",
@@ -885,39 +887,41 @@
     "                'min_samples_leaf': [1,2,3,4,5]\n",
     "                }\n",
     "\n",
+    "# Performing randomised search\n",
     "rf = RandomForestClassifier()\n",
-    "rf_random = RandomizedSearchCV(rf, random_grid, n_iter=500, scoring='accuracy', n_jobs=-1, cv=5)\n",
-    "model_random = rf_random.fit(train_pca,y_train)\n",
+    "rf_search = RandomizedSearchCV(rf, random_grid, n_iter=500, scoring='accuracy', n_jobs=-1, cv=5, random_state=0)\n",
+    "rf_search.fit(train_pca,y_train)\n",
     "\n",
-    "print('Best hyperparameters are: '+str(model_random.best_params_))\n",
-    "print('Best score is: '+str(model_random.best_score_))"
+    "\n",
+    "# Best hyperparameters and their accuracy\n",
+    "print('Best hyperparameters: ' + str(rf_search.best_params_))\n",
+    "print('Best accuracy score: ' + str(rf_search.best_score_))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.64"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score on the test set: 0.64\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn import preprocessing\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "# Import necessary functions\n",
+    "from sklearn.metrics import accuracy_score # calculating accuracy\n",
     "\n",
+    "# Random forest with best hyperparameters\n",
+    "rf_model = RandomForestClassifier(n_estimators=250, min_samples_split=7, min_samples_leaf=2, max_depth=250, random_state=0)\n",
+    "rf_model.fit(train_pca, y_train)\n",
     "\n",
-    "rf_pca_tuning = RandomForestClassifier(n_estimators = 250, min_samples_split=5, min_samples_leaf=1, max_depth=150, random_state=0)\n",
-    "rf_pca_tuning.fit(train_pca, y_train)\n",
-    "pca_tune_prediction = rf_pca_tuning.predict(test_pca)\n",
-    "accuracy_score(y_test,pca_tune_prediction)"
+    "# Results of random forest on the test set\n",
+    "rf_prediction = rf_model.predict(test_pca)\n",
+    "print('Accuracy score on the test set: ' + str(accuracy_score(y_test, rf_prediction)))"
    ]
   }
  ],
