--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -61,7 +61,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### functions"
+        "functions"
       ]
     },
     {
@@ -84,8 +84,7 @@
         "\n",
         "        TRAINSET = X_train_csv.merge(y_train_csv, left_index=True, right_index=True)\n",
         "        TRAINSET.to_csv('TRAIN_set.csv')\n",
-        "        return split_action\n",
-        "    "
+        "        return split_action"
       ]
     },
     {
@@ -146,6 +145,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.feature_selection import SelectKBest, mutual_info_classif\n",
+        "\n",
         "TRAIN = pd.read_csv('TRAIN_set.csv', index_col=0)\n",
         "X_train = TRAIN.drop('label', axis=1)\n",
         "y_train = TRAIN['label']\n",
@@ -158,19 +164,49 @@
         "# split into training and validation set\n",
         "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.3, random_state=10)\n",
         "\n",
-        "from sklearn.pipeline import Pipeline\n",
-        "\n",
-        "print(f'Size before preprocess: ', X_train.shape)\n",
-        "\n",
-        "pipe_preprocess = Pipeline([\n",
-        "    (\"check nan\", SimpleImputer(missing_values=np.nan, strategy='mean')),\n",
-        "    (\"scale\", StandardScaler()),\n",
-        "    (\"variance\", VarianceThreshold(threshold=0)),\n",
+        "pipe = Pipeline([\n",
+        "    ('scaling', StandardScaler()),\n",
+        "    ('reduce_dim', 'passthrough'),\n",
+        "    ('classify', SVC(kernel='sigmoid', max_iter=1000))\n",
         "])\n",
         "\n",
-        "X_train = pipe_preprocess.fit_transform(X_train)\n",
-        "X_valid = pipe_preprocess.transform(X_valid)\n",
-        "print(f'Size after preprocess: ', X_train.shape)"
+        "N_FEATURES_OPTIONS = [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
+        "C_OPTIONS = [10]\n",
+        "param_grid = [\n",
+        "    {\n",
+        "        'reduce_dim': [PCA()],\n",
+        "        'reduce_dim__n_components': N_FEATURES_OPTIONS,\n",
+        "        'classify__C': C_OPTIONS\n",
+        "    },\n",
+        "    {\n",
+        "        'reduce_dim': [SelectKBest(mutual_info_classif)],\n",
+        "        'reduce_dim__k': N_FEATURES_OPTIONS,\n",
+        "        'classify__C': C_OPTIONS\n",
+        "    },\n",
+        "]\n",
+        "reducer_labels = ['PCA', 'KBest(mutual_info_classif)']\n",
+        "\n",
+        "grid = GridSearchCV(pipe, n_jobs=1, param_grid=param_grid)\n",
+        "grid.fit(X_train, y_train)\n",
+        "print(grid.best_params_)\n",
+        "\n",
+        "mean_scores = np.array(grid.cv_results_['mean_test_score'])\n",
+        "# scores are in the order of param_grid iteration, which is alphabetical\n",
+        "mean_scores = mean_scores.reshape(len(C_OPTIONS), -1, len(N_FEATURES_OPTIONS))\n",
+        "# select score for best C\n",
+        "mean_scores = mean_scores.max(axis=0)\n",
+        "mean_scores = pd.DataFrame(\n",
+        "    mean_scores.T, index=N_FEATURES_OPTIONS, columns=reducer_labels\n",
+        ")\n",
+        "\n",
+        "ax = mean_scores.plot.bar()\n",
+        "ax.set_title(\"Comparing feature selection techniques\")\n",
+        "ax.set_xlabel(\"Reduced number of features\")\n",
+        "ax.set_ylabel(\"Digit classification accuracy\")\n",
+        "ax.set_ylim((0, 1))\n",
+        "ax.legend(loc=\"upper left\")\n",
+        "\n",
+        "plt.show()"
       ]
     },
     {
@@ -179,6 +215,15 @@
       "metadata": {},
       "source": [
         "# Classify"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n"
       ]
     }
   ],
@@ -202,7 +247,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "950fc4b699e5f5d2546c8910bdd20cbc496d6b8a7cbfe805f3578b0419993ce2"
+      }
     }
   },
   "nbformat": 4,
