--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -39,9 +39,7 @@
   },
   {
    "cell_type": "code",
-
-   "execution_count": 176,
-
+   "execution_count": 57,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -72,31 +70,26 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, roc_curve, auc\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.impute import SimpleImputer\n",
-     
-     "from sklearn import preprocessing\n",
-
+    "from sklearn import preprocessing\n",
     "\n",
     "data = load_data()\n",
+    "dataframe = pd.DataFrame(data)\n",
     "print(f\"The number of samples: {len(data.index)}\")\n",
     "print(f\"The number of columns: {len(data.columns)}\")\n",
     "print(f\"The number of liposarcoma in the dataset: {len(data[data['label'] == 'liposarcoma'])}\")\n",
-    "print(f\"The number of lipoma in the dataset: {len(data[data['label'] == 'lipoma'])}\")\n"
+    "print(f\"The number of lipoma in the dataset: {len(data[data['label'] == 'lipoma'])}\")"
    ]
   },
   {
-
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Now we know the number of samples, colums and labels. The next step is to look for missing data. \n"
-
    ]
   },
   {
    "cell_type": "code",
-
-   "execution_count": 177,
-
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -109,37 +102,30 @@
     }
    ],
    "source": [
-    "def split_data(data, test_size=0.2, random_state=42):\n",
-    "\n",
-    "    data = pd.DataFrame(data)\n",
+    "def split_data(dataframe):\n",
     "\n",
     "    # Separate features and target variable\n",
-
-    "    x = data.drop(['label', 'ID'], axis=1)\n",
-    "    y = data['label']\n",
-
+    "    x = dataframe.drop(['label'], axis=1)\n",
+    "    y = dataframe['label']\n",
     "    \n",
     "    # Split the dataset into training and testing sets\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=test_size, random_state=random_state)\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
     "    \n",
     "    return x_train, x_test, y_train, y_test\n",
     "\n",
     "\n",
     "# Call the function\n",
-    "x_train, x_test, y_train, y_test = load_and_split_data(csv_path, target_col, test_size)\n",
+    "x_train, x_test, y_train, y_test = split_data(dataframe)\n",
     "\n",
     "# Optionally, print the sizes of the splits to verify\n",
     "print(\"Training set size:\", x_train.shape)\n",
-
     "print(\"Testing set size:\", x_test.shape)"
-
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 59,
    "metadata": {},
-
    "outputs": [
     {
      "name": "stdout",
@@ -179,7 +165,7 @@
     "    return zeros_count\n",
     "\n",
     "# Roep de functie aan met je dataset 'data'\n",
-    "zeros_count = find_zeros_in_data(data)"
+    "zeros_count = find_zeros_in_data(data)\n"
    ]
   },
   {
@@ -191,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +202,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-
    "outputs": [],
    "source": []
   }
@@ -242,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
