Last changes preprocessing

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -11,39 +11,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 135,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CiDn2Sk-VWqE",
-        "outputId": "c3fac6a6-6e8f-46d4-ecfe-a89e7934f3ec"
+        "outputId": "1f614f10-442b-422d-8b71-8c0039485b2b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m23.7/23.7 MB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m823.6/823.6 kB\u001b[0m \u001b[31m58.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.1/14.1 MB\u001b[0m \u001b[31m69.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m731.7/731.7 MB\u001b[0m \u001b[31m890.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m410.6/410.6 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.6/121.6 MB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.5/56.5 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m124.2/124.2 MB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m196.0/196.0 MB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m166.0/166.0 MB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.1/99.1 kB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m47.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for ktml (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
       "source": [
         "# Run this to use from colab environment\n",
-        "!pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
+        "# !pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
       ]
     },
     {
@@ -71,10 +58,12 @@
         "\n",
         "# Preprocessing steps\n",
         "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.pipeline import Pipeline\n",
         "from scipy.stats import shapiro\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.preprocessing import RobustScaler\n",
         "\n",
         "# Feature selection\n",
         "from sklearn.feature_selection import RFECV\n",
@@ -84,7 +73,7 @@
       "metadata": {
         "id": "RPltM9lAmbIn"
       },
-      "execution_count": 16,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -100,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +212,7 @@
         "id": "Llz2aPWlneOo",
         "outputId": "8f525050-c5d2-402a-f69b-ef5445e4e261"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,7 +260,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +316,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,12 +392,60 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define counter for columns with many outliers\n",
+        "columns_with_many_outliers_count = 0\n",
+        "\n",
+        "for column in X_train:\n",
+        "    Q1 = X_train[column].quantile(0.25)\n",
+        "    Q3 = X_train[column].quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "\n",
+        "    # Calculate number of outliers\n",
+        "    outliers = X_train[(X_train[column] < (Q1 - 1.5 * IQR)) | (X_train[column] > (Q3 + 1.5 * IQR))]\n",
+        "    outliers_count = outliers.shape[0]\n",
+        "\n",
+        "    # Define what 'many' outliers mean\n",
+        "    if outliers_count > 0.05 * X_train.shape[0]:\n",
+        "        columns_with_many_outliers_count += 1\n",
+        "        # print(f\"{column} has many outliers: {outliers_count} outliers\")\n",
+        "\n",
+        "print(f\"Number of columns with many outliers: {columns_with_many_outliers_count}\")\n"
+      ],
+      "metadata": {
+        "id": "L5ePShRwmJrY",
+        "outputId": "3630d543-2613-4282-9edd-13627d43cd73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of columns with many outliers: 187\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Scaler\n",
+        "\n",
+        "# scaler = StandardScaler()\n",
+        "# scaler = MinMaxScaler()\n",
+        "scaler = RobustScaler()\n",
+        "\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_train_scaled_df = pd.DataFrame(X_train_scaled, columns=X_train.columns, index=X_train.index)\n",
         "\n"
       ],
       "metadata": {
-        "id": "Mn3S6RZH98d1"
+        "id": "vR4vx1oJoZBn"
       },
-      "execution_count": 20,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -423,7 +460,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Feature selection"
+        "## Feature selection and extraction"
       ],
       "metadata": {
         "id": "bTxLT12kH1u5"
@@ -432,8 +469,31 @@
     {
       "cell_type": "code",
       "source": [
+        "## Without scaling (for X_train)\n",
+        "# min_features = 1\n",
+        "# clf  = LogisticRegression(solver='liblinear')\n",
+        "# cv = StratifiedKFold(2)\n",
+        "\n",
+        "# rfecv = RFECV(\n",
+        "#     estimator=clf,\n",
+        "#     cv=cv,\n",
+        "#     # scoring = \"accuracy\",\n",
+        "#     min_features_to_select = min_features\n",
+        "# )\n",
+        "\n",
+        "# rfecv.fit(X_train, Y_train)\n",
+        "\n",
+        "# print(f\"Optimal number of features: {rfecv.n_features_}\")\n",
+        "\n",
+        "# if rfecv.n_features_ > len(X_train.index):\n",
+        "#   pca = decomposition.PCA(n_components=0.95)\n",
+        "#   pca.fit(X_train)\n",
+        "#   X_train = pca.transform(X_train)\n",
+        "\n",
+        "\n",
+        "## With / after scaling (for X_train_robust_scaled_df)\n",
         "min_features = 1\n",
-        "clf  = LogisticRegression()\n",
+        "clf  = LogisticRegression(solver='liblinear')\n",
         "cv = StratifiedKFold(2)\n",
         "\n",
         "rfecv = RFECV(\n",
@@ -443,70 +503,31 @@
         "    min_features_to_select = min_features\n",
         ")\n",
         "\n",
-        "rfecv.fit(X_train, Y_train)\n",
+        "rfecv.fit(X_train_scaled_df, Y_train)\n",
         "\n",
-        "print(f\"Optimal number of features: {rfecv.n_features}\")\n",
+        "print(f\"Optimal number of features: {rfecv.n_features_}\")\n",
         "\n",
-        "if rfecv.n_features > X_train.index:\n",
-        "  pca = decomposition.PCA(n_components=3)\n",
-        "  pca.fit(X_train)\n",
-        "  X_train = pca.transorm(X_train)\n",
+        "if rfecv.n_features_ > len(X_train_scaled_df.index):\n",
+        "    pca = decomposition.PCA(n_components=0.95)\n",
+        "    pca.fit(X_train_scaled_df)\n",
+        "    X_train_scaled_df = pca.transform(X_train_scaled_df)\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "pY2smu5SH9NH"
-      },
-      "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## uncomment following lines to print different info\n",
-        "# print(X_train.head())\n",
-        "# print(X_train.info())\n",
-        "# print(X_train.describe()) # Gives 8 metrics per column [8x494]\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Pipeline for numerical features\n",
-        "numeric_transformer = Pipeline(steps=[\n",
-        "    ('imputer', SimpleImputer(strategy='median')),  # Impute missing values\n",
-        "    ('scaler', StandardScaler()),  # Scale features\n",
-        "    ('pca', PCA(n_components=0.95))  # Reduce dimensionality (nog kijken welke waarden)\n",
-        "])\n",
-        "\n",
-        "X_preprocessed = numeric_transformer.fit_transform(X_train)\n",
-        "print(X_preprocessed)"
-      ],
-      "metadata": {
+        "id": "pY2smu5SH9NH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hPPAXQVpovws",
-        "outputId": "119630fc-8e38-4a93-86f7-b526e230cf6c"
+        "outputId": "fd9a92a8-6105-4bef-f75c-070e07479e6e"
       },
-      "execution_count": null,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Series([], dtype: int64)\n",
-            "[[  3.69308699  10.49965385   8.12652172 ...  -0.14012688  -0.18474327\n",
-            "    1.24139976]\n",
-            " [ -4.56127894   2.81882473  -7.840514   ...   1.63287141   1.38134925\n",
-            "   -1.52803909]\n",
-            " [ -0.74152394   8.56443472   0.86427269 ...   0.10569603   1.22296131\n",
-            "   -0.7835249 ]\n",
-            " ...\n",
-            " [ -4.07252116   3.20510508   7.39819921 ...  -0.56923872  -0.41247159\n",
-            "   -2.87638164]\n",
-            " [  2.92986516  -5.37845493   7.16185485 ...   1.10432961  -0.65658447\n",
-            "    1.31493125]\n",
-            " [-11.36513284 -13.00480223  -7.77865287 ...   1.82404703   0.12141449\n",
-            "   -1.78605994]]\n"
+            "Optimal number of features: 9\n"
           ]
         }
       ]
